--- a/index.html
+++ b/index.html
@@ -7,21 +7,28 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="Components/style.css">
+    <script src="Components/otherStudent.js"></script>
     <title>VNS College</title>
   </head>
   <body>
       <div class="container">
-    <h1>VNS GROUP OF COLLEGES</h1>
-    <div class="dropdown">
-       Select:  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Select Dropdown
+        <div class="col-sm-10 col-lg-12">
+          <img src="../assets/axis.jpg" alt="axis image"/>
+      </div>
+    <h2>VNS GROUP OF COLLEGES</h2>
+
+    <div class="form-group" style="margin-top: 20px;">
+      <div class="col-sm-10 col-lg-6">
+        <span style="font-size: 20px;">Select<sup>*  </sup> :</span> <button class="btn btn-light dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Select student type
         </button>
-        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" style="left: 50px;">
           <a class="dropdown-item" href="Components/existingStudents.html">Existing Students</a>
           <a class="dropdown-item" href="Components/othersStudents.html">Others</a>
         </div>
       </div>
+    </div>
     </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
