modified page design as per client requirment

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
       <div class="container">
         <div class="col-sm-10 col-lg-12">
-          <img src="../assets/axis.jpg" alt="axis image"/>
+          <img src="assets/axis.jpg" alt="axis image"/>
       </div>
     <h2>VNS GROUP OF COLLEGES</h2>
 
