--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="col-sm-10 col-lg-12">
           <img src="assets/axis.jpg" alt="axis image"/>
       </div>
-    <h2>VNS GROUP OF COLLEGES</h2>
+      <h4 style="margin-left: 6%;">VNS GROUP OF COLLEGES</h4>
 
     <div class="form-group" style="margin-top: 20px;">
       <div class="col-sm-10 col-lg-6">
